# rustos

./: Cargo.toml  build.rs
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: main.rs
kernel/src/common/: mod.rs
rustos-bootloader/: Cargo.toml  link.ld
rustos-bootloader/bios/stage-1/: link.ld
rustos-bootloader/bios/stage-1/src/: boot-start.s  boot.s  disk_address_packet.rs  main.rs  mbr.rs  print.rs  setup.rs
rustos-bootloader/bios/stage-2/: Cargo.toml
rustos-bootloader/src/: boot.s  fail.rs  main.rs
rustos-bootloader/stage-1/: Cargo.toml  build.rs  link.ld
rustos-bootloader/stage-1/src/: boot.s  fail.rs  main.rs
rustos-kernel/: Cargo.toml
rustos-kernel/src/: lib.rs  main.rs
rustos-kernel/src/common/: logger.rs
rustos-test/: Cargo.toml
rustos-test/src/: main.rs
src/: disk.rs  lib.rs  main.rs
testing/: Cargo.toml
testing/derive/: Cargo.toml
testing/src/: lib.rs
tests/: run-qemu.rs
