[package]
name = "rustos"
version = "0.1.0"

[build-dependencies]
bootloader.workspace = true
rustos-kernel = { path = "rustos-kernel", artifact = "bin", target = "x86_64-unknown-none" }
rustos-test = { path = "rustos-test", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace.dependencies]
x86_64 = "0.14"
log = { version = "0.4", default-features = false }
linkme = "0.3"
bootloader = "0.11"
bootloader_api = "0.11"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }


[workspace]
members = ["rustos-kernel", "rustos-test", "testing"]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "run-qemu"
path = "tests/run-qemu.rs"
edition = "2021"
