[package]
name = "rustos"
version = "0.1.0"


[dependencies]


[workspace]
members = ["rustos-bootloader"]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.stage-1]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false

[[test]]
name = "run-qemu"
path = "tests/run-qemu.rs"
edition = "2021"
