[package]
name = "rustos"
version = "0.1.0"


[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

[build-dependencies]
bootloader = "0.11"
rustos-kernel = { path = "rustos-kernel", artifact = "bin", target = "x86_64-unknown-none" }

[workspace]
members = ["rustos-kernel"]
resolver = "2"

[workspace.dependencies]
bootloader_api = "0.11"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
