[package]
name = "rustos-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustos-kernel = { path = "../rustos-kernel", features = ["test"] }
testing = { path = "../testing" }

log = { version = "0.4", default-features = false }

bootloader_api = { version = "0.11" }
x86_64 = { version = "0.14" }
linkme = { version = "0.3" }

# itertools = { version = "0.11.0", default-features = false, features = [
#     "use_alloc",
# ] }
