[package]
name = "rustos-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustos-kernel = { path = "../rustos-kernel", features = ["test"] }
testing = { path = "../testing" }

log.workspace = true
bootloader_api.workspace = true
x86_64.workspace = true
linkme.workspace = true

# itertools = { version = "0.11", default-features = false, features = [
#     "use_alloc",
# ] }
