[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testing-derive = { path = "derive" }
x86_64 = "0.14"
log = "0.4"
linkme = "0.3"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
